--- a/package.json
+++ b/package.json
@@ -9,58 +9,58 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "3.9.1",
-    "@kinde-oss/kinde-auth-nextjs": "1.10.2",
-    "@mantine/hooks": "7.15.1",
-    "@pinecone-database/pinecone": "1.1.3",
-    "@prisma/client": "5.22.0",
-    "@radix-ui/react-avatar": "1.1.2",
-    "@radix-ui/react-dialog": "1.1.3",
-    "@radix-ui/react-dropdown-menu": "2.1.3",
-    "@radix-ui/react-progress": "1.1.1",
-    "@radix-ui/react-slot": "1.1.1",
-    "@radix-ui/react-toast": "1.2.3",
-    "@radix-ui/react-tooltip": "1.1.5",
-    "@tailwindcss/typography": "0.5.15",
-    "@tanstack/react-query": "5.62.7",
-    "@trpc/client": "11.0.0-rc.660",
-    "@trpc/next": "11.0.0-rc.660",
-    "@trpc/react-query": "11.0.0-rc.660",
-    "@trpc/server": "11.0.0-rc.660",
+    "@hookform/resolvers": "^3.9.1",
+    "@kinde-oss/kinde-auth-nextjs": "^1.10.2",
+    "@mantine/hooks": "^7.15.1",
+    "@pinecone-database/pinecone": "^1.1.3",
+    "@prisma/client": "^5.22.0",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.3",
+    "@radix-ui/react-dropdown-menu": "^2.1.3",
+    "@radix-ui/react-progress": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.1.5",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/react-query": "^4.36.1",
+    "@trpc/client": "^10.45.2",
+    "@trpc/next": "^10.45.2",
+    "@trpc/react-query": "^10.45.2",
+    "@trpc/server": "^10.45.2",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
-    "@uploadthing/react": "5.7.0",
-    "ai": "2.2.37",
+    "@uploadthing/react": "^5.7.0",
+    "ai": "^2.2.37",
     "autoprefixer": "10.4.16",
-    "class-variance-authority": "0.7.1",
-    "clsx": "2.1.1",
-    "date-fns": "2.30.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
-    "langchain": "0.0.153",
-    "lucide-react": "0.279.0",
+    "langchain": "^0.0.153",
+    "lucide-react": "^0.279.0",
     "next": "13.5.2",
-    "openai": "4.76.3",
-    "pdf-parse": "1.1.1",
+    "openai": "^4.76.3",
+    "pdf-parse": "^1.1.1",
     "postcss": "8.4.30",
-    "prisma": "5.22.0",
+    "prisma": "^5.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-dropzone": "14.3.5",
-    "react-hook-form": "7.54.1",
-    "react-loading-skeleton": "3.5.0",
-    "react-markdown": "8.0.7",
-    "react-pdf": "7.7.3",
-    "react-resize-detector": "9.1.1",
-    "react-textarea-autosize": "8.5.6",
-    "simplebar-react": "3.3.0",
-    "stripe": "13.11.0",
-    "tailwind-merge": "1.14.0",
+    "react-dropzone": "^14.3.5",
+    "react-hook-form": "^7.54.1",
+    "react-loading-skeleton": "^3.5.0",
+    "react-markdown": "^8.0.7",
+    "react-pdf": "^7.7.3",
+    "react-resize-detector": "^9.1.1",
+    "react-textarea-autosize": "^8.5.6",
+    "simplebar-react": "^3.3.0",
+    "stripe": "^13.11.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
-    "tailwindcss-animate": "1.0.7",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
-    "uploadthing": "5.7.4",
-    "zod": "3.24.1"
+    "uploadthing": "^5.7.4",
+    "zod": "^3.24.1"
   }
 }
