--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@huggingface/inference": "^2.8.1",
     "@kinde-oss/kinde-auth-nextjs": "^1.10.2",
+    "@langchain/community": "^0.3.19",
+    "@langchain/core": "^0.3.26",
     "@mantine/hooks": "^7.15.1",
-    "@pinecone-database/pinecone": "^1.1.3",
+    "@pinecone-database/pinecone": "^4.0.0",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.3",
