--- a/package.json
+++ b/package.json
@@ -41,16 +41,15 @@
     "clsx": "^2.1.1",
     "date-fns": "^2.30.0",
     "eslint": "8.49.0",
-    "eslint-config-next": "13.5.2",
     "langchain": "^0.0.153",
     "lucide-react": "^0.279.0",
-    "next": "13.5.2",
+    "next": "14.2.21",
     "openai": "^4.76.3",
     "pdf-parse": "^1.1.1",
     "postcss": "8.4.30",
     "prisma": "^5.22.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.54.1",
     "react-loading-skeleton": "^3.5.0",
@@ -66,5 +65,8 @@
     "typescript": "5.2.2",
     "uploadthing": "5.6.1",
     "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "eslint-config-next": "14.2.21"
   }
 }
